# xulsword

./: .copy_server_env.json  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  ReadMe.md  ReadMe.txt  ToDo.txt  VagrantProvision.sh  Vagrantfile  afterPack.js  afterPack.mjs  babel.config.js  babel.config.mjs  build.sh  eslint.config.mjs  filter-ppr.pl  init.sh  jest.config.js  locale2json.pl  package.json  parsecode.pl  setenv  setxce  start-server.sh  tsconfig.json  type.d.ts  webpack.config.mjs
Cpp/: .gitattributes  CMakeLists.txt  Compile.bat  CompileAll.bat  IDLcomp.bat  Makefile.am  allowCRCs.h  autogen.sh  comparecanon.pl  configure.ac  createModule.cpp  fileops.cpp  gbfhtmlxul.cpp  gbfhtmlxul.h  ixulsword.h  ixulsword.idl  osisdictionary.cpp  osisfootnotesxul.cpp  osishtmlxul.cpp  osishtmlxul.h  redefs_clucene.h  redefs_sword.h  security.cpp  security.h  staticlib.sh  thmlhtmlxul.h  thmlxhtmlxs.cpp  versemaps.h  versions.bat  xulsword.cpp  xulsword.h
Cpp/cdrun/: CDRunApp.rc  Compile.bat  cdrun.cpp  stdafx.h
Cpp/cluceneMK/lib/: Compile.bat
Cpp/cluceneMK/osx/: repl_tchar.h
Cpp/cluceneMK/src/CLucene/: CLMonolithic.cpp
Cpp/cluceneMK/src/CLucene/util/: MD5Digester.cpp
Cpp/cluceneMK/windows/lib/: Compile.bat
Cpp/crclib/: Common.h  Crc32.cpp  Crc32.h  Crc32Dlg.cpp  Crc32Dynamic.cpp  Crc32Dynamic.h  Crc32Static.h  StdAfx.cpp  StdAfx.h  resource.h
Cpp/noneed/: Makefile.am  staticlib.sh
Cpp/phpsword/: config.m4  phpmethods.cpp  phpsword.cpp  phpsword.h  staticlib.sh
Cpp/phpsword/php/: Phrases_browserBible.php  browserBible.css  browserBible.js  browserBible.php  browserBible_common.php
Cpp/runMK/: Compile.bat  resource.h  runMK.cpp  runMK.rc
Cpp/runPortable/: Compile.bat  runPortable.cpp  stdafx.h
Cpp/src/: gbfxhtml_xs.cpp  gbfxhtmlxs.cpp  libxulsword.cpp  osisxhtml_xs.cpp  osisxhtmlxs.cpp  security.cpp  swmgr_xs.cpp  swmgrxs.cpp  swmodule_createSearchFramework.cpp  swmodule_search.cpp  swmodule_xs.cpp  teixhtml_xs.cpp  thmlxhtml_xs.cpp  thmlxhtmlxs.cpp  xulsword.cpp
Cpp/src/include/: canon_east.h  canon_synodal0.h  canon_synodalprot.h  gbfxhtmlxs.h  libxulsword.h  osisdictionary.h  osisxhtmlxs.h  security.h  teixhtmlxs.h  thmlxhtmlxs.h  versemaps.h  xulsword.h
Cpp/src/windows/: windefs_clucene.h
Cpp/src/windows/startup/cdrun/: w32process.h
Cpp/sword-versification-maps/sword-commit-3900/include/: canon_lxx.h
Cpp/sword-versification-maps/sword-commit-3900/src/mgr/: versificationmgr.cpp
Cpp/sword-versification-maps/sword/include/: canon_catholic.h  canon_catholic2.h  canon_german.h  canon_leningrad.h  canon_luther.h  canon_mt.h  canon_nrsv.h  canon_nrsva.h  canon_segond.h  canon_synodal.h  canon_synodalprot.h
Cpp/sword-versification-maps/sword/src/mgr/: versificationmgr.cpp
Cpp/swordMK/: filemgr.cpp  osisheadings.cpp  regex.c  swmodule.cpp  utilstr.cpp
Cpp/swordMK/include/: defs.h  swmodule.h
Cpp/swordMK/lib/: Compile.bat
Cpp/swordMK/src/mgr/: filemgr.cpp  installmgr.cpp  localemgr.cpp  markupfiltmgr.cpp  swmgr.cpp
Cpp/swordMK/src/modules/: swmodule.cpp
Cpp/swordMK/src/modules/filters/: osisheadings.cpp
Cpp/swordMK/src/utilfuns/win32/: dirent.cpp  dirent.h  fileops.h  io.h
Cpp/swordMK/utilities/: Compile.bat  emptyvss.cpp  osis2mod.cpp
Cpp/swordMK/windows/lib/: Compile.bat
Cpp/swordMK/windows/utilities/: Compile.bat
Cpp/windows/: Compile.bat  CompileAll.bat  clucene-TryRunResult-posix.cmake  clucene-TryRunResult-win32.cmake  clucene-build.patch  clucene-src.patch  cmake-toolchain.64win  libsword-src.patch  toolchain.cmake
Cpp/windows/cdrun/: CDRunApp.rc  Compile.bat  cdrun.cpp  w32process.h
Cpp/windows/runMK/: runMK.cpp
Cpp/windows/runPortable/: runPortable.cpp
Cpp/windows/startup/: Compile.bat  startup.cpp
assets/: icon.icns  (+1 more)
trunk/Cpp/: Compile.bat  CompileAll.bat  IDLcomp.bat  Makefile.am  XULSWORD REFS.ods  autogen.sh  canon_east.h  comparecanon.pl  configure.ac  fileops.cpp  fileops.h  gbfhtmlxul.cpp  ixulsword.h  ixulsword.idl  localeCodes.pl  localeCodes2.7.pl  osisdictionary.cpp  osisfootnotesxul.h  osishtmlxul.h  osisplainxul.cpp  osisplainxul.h  security.cpp  staticlib.sh  thmlhtmlxul.cpp  versions.bat  windefs_sword.h  xulsword.cpp  xulsword.h
trunk/Cpp/cdrun/: CDRunApp.res  Compile.bat  cdrun.cpp
trunk/Cpp/cluceneMK/: CLMonolithic.cpp
trunk/Cpp/cluceneMK/lib/: Compile.bat
trunk/Cpp/cluceneMK/src/CLucene/analysis/: Analyzers.cpp
trunk/Cpp/cluceneMK/src/CLucene/config/: CompilerMsvc.h
trunk/Cpp/cluceneMK/src/CLucene/store/: FSDirectory.cpp
trunk/Cpp/cluceneMK/windows/lib/: Compile.bat
trunk/Cpp/crclib/: Compile.bat  Crc32Dlg.h  Crc32Static.cpp  HiResTimer.cpp  HiResTimer.h
trunk/Cpp/phpsword/: config.m4  config64.sh  phpsword.cpp  staticlib.sh
trunk/Cpp/phpsword/php/: Phrases_browserBible.php  browserBible.css  browserBible.js  browserBible.php  browserBible_common.php
trunk/Cpp/runMK/: CDRunApp.rc  Compile.bat  runMK.cpp  stdafx.h
trunk/Cpp/runPortable/: Compile.bat  runPortable.cpp  stdafx.cpp  stdafx.h  w32process.h
trunk/Cpp/src/: gbfxhtml_xs.cpp  gbfxhtmlxs.cpp  libxulsword.cpp  osisdictionary.cpp  osisxhtml_xs.cpp  osisxhtmlxs.cpp  security.cpp  swmgr_xs.cpp  thmlxhtmlxs.cpp  xulsword.cpp
trunk/Cpp/src/include/: canon_east.h  canon_synodalprot.h  gbfxhtmlxs.h  osisxhtmlxs.h  thmlxhtmlxs.h  versemaps.h  xulsword.h
trunk/Cpp/src/windows/: fileops.cpp  fileops.h  windefs_sword.h
trunk/Cpp/swordMK/: filemgr.cpp  swmodule.cpp
trunk/Cpp/swordMK/include/: swmodule.h
trunk/Cpp/swordMK/lib/: Compile.bat
trunk/Cpp/swordMK/src/mgr/: filemgr.cpp  stringmgr.cpp  swmgr.cpp  versemgr.cpp
trunk/Cpp/swordMK/src/modules/: swmodule.cpp
trunk/Cpp/swordMK/utilities/: Compile.bat  EDITS README.txt  emptyvss.cpp  imp2ld.cpp  mkfastmod.cpp  mod2zmod.cpp  osis2mod.cpp
trunk/Cpp/swordMK/windows/lib/: Compile.bat
trunk/Cpp/windows/: Compile.bat  CompileAll.bat
trunk/Cpp/windows/cdrun/: cdrun.cpp  stdafx.h  w32process.cpp
trunk/Cpp/windows/runMK/: Compile.bat  runMK.cpp
trunk/Cpp/windows/startup/: Compile.bat  startup.cpp  startup.rc  stdafx.h
(+1590 files in other folders)
